HTTP-log/Router/test_svc-deployment.yaml
echo "
apiVersion: v1
kind: Service
metadata:
  labels:
    app: http-log-test
  name: http-log-svc
spec:
  ports:
  - port: 8080
    name: high
    protocol: TCP
    targetPort: 8080
  - port: 100
    name: low
    protocol: TCP
    targetPort: 8080
  selector:
    app: http-log-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: http-log-test
  name: http-log-echo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-log-test
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: http-log-test
    spec:
      containers:
      - image: gcr.io/kubernetes-e2e-test-images/echoserver:2.2
        name: http-log-echo
        ports:
        - containerPort: 8080
        resources: {}
" | kubectl apply -f - -n kong
