HTTP-log/Router/test_host_ingress.yaml
echo "
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-log-ingress
  annotations:
    konghq.com/plugins: http-log-plugin-osp, request-id
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /http_osp
        pathType: ImplementationSpecific
        backend:
          service:
            name: echo
            port:
              number: 80
" | kubectl apply -f -
